# cashier_workspace

./: CMakeLists.txt  LICENSE  README.md  main.cpp
data/: catalog.json  sellers.json
headers/: App.hpp  Catalog.hpp  Check.hpp  Config.hpp  Errors.hpp  Interface.hpp  Item.hpp  Sellers.hpp  WorkShift.hpp
src/: App.cpp  Catalog.cpp  Check.cpp  Config.cpp  Interface.cpp  Item.cpp  Sellers.cpp  WorkShift.cpp
